@@ -495,6 +495,8 @@ struct
      "%s() failed to parse line node, assuming %d bytes\n'%s'\n", 0 },
   { W_FLEXARRAY_INSTRUCT, ERROR_LEVEL_WARNING,
      "using a flexible array '%s' in a struct", 0},
+  { W_ANONYMOUS_MEMBER, ERROR_LEVEL_WARNING,
+     "anonymous member in struct/union", 0},
 };
 
 /* -------------------------------------------------------------------------------
